--- a/server/login/templates/login/login.html
+++ b/server/login/templates/login/login.html
@@ -81,8 +81,8 @@
                     })
 
                     if (result.is_student)
-                    // delayURL("/student/cvRecord") 
-                        delayURL("/student/checkLogin")
+                        delayURL("/student/index")
+                        // delayURL("/student/checkLogin")
                     else
                         delayURL("/manager/student_filter")
 
