--- a/server/student/templates/student/index.html
+++ b/server/student/templates/student/index.html
@@ -16,15 +16,13 @@
     </div>
 
     <header>
-        <a href="#" class="brand">Jacob</a>
+        <a href="#" class="brand">HKBU CV System</a>
         <div class="menu-btn"></div>
         <div class="navigation">
-            <a href="#main">Home</a>
-            <a href="#about">About</a>
-            <a href="#skills">Skills</a>
-            <a href="#services">Services</a>
-            <a href="#work">Work</a>
-            <a href="#contact">Contact</a>
+            <a href="/student/cvRecord">CV Record</a>
+            <a href="/student/jobList">Job List</a>
+            <a href="/student/jobDetail">Job Detail</a>
+            <a href="/student/cvProfile">Profile</a>
         </div>
     </header>
 
@@ -36,7 +34,7 @@
           <h3>Web Developer</h3>
           <h3>Motion Graphic Designer</h3>
         </div> -->
-            <a href="#" class="btn">Create your CV</a>
+            <a href="/student/create_cv_form" class="btn">Create your CV</a>
             <!-- <div class="media-icons">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
@@ -49,7 +47,7 @@
         </div>
     </section>
 
-  
+
     <footer class="footer">
         <span class="footer-title">Jacob Stevens</span>
         <p>Copyright @2021 <a href="#">Coding Snow</a>. All Rights Reserved.</p>
