--- a/server/student/templates/student/cvProfile.html
+++ b/server/student/templates/student/cvProfile.html
@@ -7,7 +7,7 @@
 
     {% csrf_token %}
     <div class="container">
-        {% for cvBasic in cvBasicInfo %}
+        {% for student in studentProfile %}
         <h1 class="mb-5">Edit Infomation</h1>
 
         <div class="bg-white shadow rounded-lg d-block d-sm-flex">
@@ -15,7 +15,7 @@
                 <div class="p-4">
                     <div class="img-circle text-center mb-3">
 
-                        <img src="{{cvBasic.profileIcon}}" alt="Image" class="shadow" id="icon-preview">
+                        <img src="{{student.profileIcon}}" alt="Image" class="shadow" id="icon-preview">
 
                     </div>
                     <input type="file" id="profileIcon" accept="image/*">
@@ -37,42 +37,44 @@
 
                     <h3 class="mb-4">Edit Infomation</h3>
                     <div class="row">
+                        {% for user in user %}
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>First Name</label>
-                                <input type="text" class="form-control" value="{{cvBasic.fristName}}" id="fristName" required>
+                                <input type="text" class="form-control" value="{{user.first_name}}" id="fristName" required>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Last Name</label>
-                                <input type="text" class="form-control" value="{{cvBasic.lastName}}" id="lastName" required>
+                                <input type="text" class="form-control" value="{{user.last_name}}" id="lastName" required>
                             </div>
                         </div>
+                        {% endfor %}
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Nick Name</label>
-                                <input type="text" class="form-control" value="{{cvBasic.nickName}}" id="nickName" required>
+                                <input type="text" class="form-control" value="{{student.nickName}}" id="nickName" required>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
+                                {% for user in user %}
                                 <label>Email</label>
-                                <input type="email" id="email" class="form-control" value="{{cvBasic.email}}" required>
+                                <input type="email" id="email" class="form-control" value="{{user.email}}" required> {% endfor %}
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>Phone number</label>
-                                <input type="number" class="form-control" id="phoneNumber" value="{{cvBasic.phone}}" min="0" required>
+                                <input type="number" class="form-control" id="phoneNumber" value="{{student.phone}}" min="0" required>
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label>Bio</label>
-                                <textarea class="form-control" id="aboutMe" rows="4" placeholder="Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore vero enim error similique quia numquam ullam corporis officia odio repellendus aperiam consequatur laudantium porro voluptatibus, itaque laboriosam veritatis voluptatum distinctio!"
-                                    required>{{cvBasic.aboutMe}}</textarea>
+                                <textarea class="form-control" id="aboutMe" rows="4" required>{{student.aboutMe}}</textarea>
                             </div>
                         </div>
                     </div>
