--- a/server/templates/include.html
+++ b/server/templates/include.html
@@ -22,3 +22,5 @@
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<script src="/static/js/global.js"></script>
